impl bmp decoder

--- a/src/gbox/makefile
+++ b/src/gbox/makefile
@@ -15,7 +15,10 @@ gbox_C_FILES 			+= \
 						core/pixmap \
 						core/bitmap \
 						core/paint \
-						core/canvas 
+						core/canvas \
+						core/image/decoder \
+						core/image/decoder/bmp 
+
 # flags
 gbox_CXFLAGS 			+= -D__tb_prefix__=\"gbox\"
 
@@ -42,6 +45,9 @@ INC_FILES 				= \
 						core/canvas.h \
 						core/3d/prefix.h \
 						core/3d/3d.h \
+						core/image/image.h \
+						core/image/prefix.h \
+						core/image/decoder.h \
 						core/svg/svg.h \
 						core/svg/prefix.h \
 						game/game.h \
