--- a/src/demo/core/platform/mac/makefile
+++ b/src/demo/core/platform/mac/makefile
@@ -9,17 +9,15 @@ demo_TYPE 									= BIN
 
 # files
 demo_C_FILES 								+= \
-											demo \
-											core/bitmap \
-											other/test
+											demo 
 
 # libs
 demo_LIBS 									+= gbox$(DTYPE) tbox$(DTYPE) 
 demo_LIBS-y 								+= $(GB_CONFIG_DEMO_LIBS)
 
 # path
-demo_INC_DIR 								+= ../../
-demo_LIB_DIR 								+= ../../gbox
+demo_INC_DIR 								+= ../../../../
+demo_LIB_DIR 								+= ../../../../gbox
 
 # flags
 demo_CXFLAGS 								+= -D__tb_prefix__=\"demo\"
@@ -27,9 +25,6 @@ demo_LDFLAGS 								+= $(GB_CONFIG_DEMO_LDFLAGS)
 
 # command
 demo_SUFFIX_CMD1 							+= $(GB_CONFIG_DEMO_CMD1)
-
-# demo
-SUB_PROS  									+= ../core
 
 # suffix
 include $(PRO_DIR)/suffix.mak
