impl load gl interfaces

--- a/src/demo/core/platform/mac/makefile
+++ b/src/demo/core/platform/mac/makefile
@@ -9,7 +9,8 @@ demo_TYPE 									= BIN
 
 # files
 demo_C_FILES 								+= \
-											demo 
+											demo \
+											../../demo
 
 # libs
 demo_LIBS 									+= gbox$(DTYPE) tbox$(DTYPE) 
