impl gl program

--- a/src/gbox/makefile
+++ b/src/gbox/makefile
@@ -38,7 +38,10 @@ gbox_C_FILES 			+= \
 # gl core files
 gbox_C_FILES-$(GB_CONFIG_THIRD_HAVE_GL) += \
 						core/device/gl \
-						core/device/gl/interface 
+						core/device/gl/interface \
+						core/device/gl/program \
+						core/device/gl/program/color \
+						core/device/gl/program/bitmap 
 
 # skia core files
 gbox_C_FILES-$(GB_CONFIG_THIRD_HAVE_SKIA) += \
