impl some sdl interfaces and clear bitmap device

--- a/src/demo/console/makefile
+++ b/src/demo/console/makefile
@@ -16,6 +16,7 @@ demo_C_FILES 								+= \
 # libs
 demo_LIBS 									+= gbox$(DTYPE) tbox$(DTYPE) 
 demo_LIBS-y 								+= $(GB_CONFIG_DEMO_LIBS)
+demo_LIBS-$(GB_CONFIG_THIRD_HAVE_SDL)  		+= SDL
 
 # path
 demo_INC_DIR 								+= ../../
