--- a/src/demo/core/platform/cygwin/makefile
+++ b/src/demo/core/platform/cygwin/makefile
@@ -10,11 +10,20 @@ demo_TYPE 									= BIN
 # files
 demo_C_FILES 								+= \
 											demo \
+											../../arc \
+											../../rect \
+											../../line \
+											../../point \
+											../../circle \
+											../../ellipse \
+											../../triangle \
 											../../demo
 
 # libs
-demo_LIBS 									+= gbox$(DTYPE) tbox$(DTYPE) 
+demo_LIBS 									+= gbox$(DTYPE) tbox$(DTYPE)
 demo_LIBS-y 								+= $(GB_CONFIG_DEMO_LIBS)
+demo_LIBS-$(GB_CONFIG_THIRD_HAVE_SDL)  		+= SDL 
+demo_LIBS-$(GB_CONFIG_APP_WINDOW_SDL)  		+= SDLmain
 
 # path
 demo_INC_DIR 								+= ../../../../
@@ -22,7 +31,7 @@ demo_LIB_DIR 								+= ../../../../gbox
 
 # flags
 demo_CXFLAGS 								+= -D__tb_prefix__=\"demo\"
-demo_LDFLAGS 								+= $(GB_CONFIG_DEMO_LDFLAGS)
+demo_LDFLAGS 								+= -L/usr/local/lib $(GB_CONFIG_DEMO_LDFLAGS)
 
 # command
 demo_SUFFIX_CMD1 							+= $(GB_CONFIG_DEMO_CMD1)
