--- a/src/demo/console/makefile
+++ b/src/demo/console/makefile
@@ -16,7 +16,8 @@ demo_C_FILES 								+= \
 # libs
 demo_LIBS 									+= gbox$(DTYPE) tbox$(DTYPE) 
 demo_LIBS-y 								+= $(GB_CONFIG_DEMO_LIBS)
-demo_LIBS-$(GB_CONFIG_THIRD_HAVE_SDL)  		+= SDL
+demo_LIBS-$(GB_CONFIG_THIRD_HAVE_SDL)  		+= SDL 
+demo_LIBS-$(GB_CONFIG_APP_WINDOW_SDL)  		+= SDLmain
 
 # path
 demo_INC_DIR 								+= ../../
