--- a/src/demo/core/platform/msvc/makefile
+++ b/src/demo/core/platform/msvc/makefile
@@ -2,39 +2,40 @@
 include $(PRO_DIR)/prefix.mak
 
 # module name
-NAMES 										= demo
+NAMES 											= application
 
 # type
-demo_TYPE 									= BIN
+application_TYPE 								= BIN
 
 # files
-demo_C_FILES 								+= \
-											demo \
-											../../arc \
-											../../rect \
-											../../line \
-											../../point \
-											../../circle \
-											../../ellipse \
-											../../triangle \
-											../../demo
+application_C_FILES 							+= \
+												main \
+												../../application \
+												../../demo \
+												../../arc \
+												../../rect \
+												../../line \
+												../../point \
+												../../circle \
+												../../ellipse \
+												../../triangle 
 
 # libs
-demo_LIBS 									+= gbox$(DTYPE) tbox$(DTYPE)
-demo_LIBS-y 								+= $(GB_CONFIG_DEMO_LIBS)
-demo_LIBS-$(GB_CONFIG_THIRD_HAVE_SDL)  		+= SDL 
-demo_LIBS-$(GB_CONFIG_APP_WINDOW_SDL)  		+= SDLmain
+application_LIBS 								+= gbox$(DTYPE) tbox$(DTYPE)
+application_LIBS-y 								+= $(GB_CONFIG_DEMO_LIBS)
+application_LIBS-$(GB_CONFIG_THIRD_HAVE_SDL)  	+= SDL 
+application_LIBS-$(GB_CONFIG_APP_WINDOW_SDL)  	+= SDLmain
 
 # path
-demo_INC_DIR 								+= ../../../../
-demo_LIB_DIR 								+= ../../../../gbox
+application_INC_DIR 							+= ../../../../
+application_LIB_DIR 							+= ../../../../gbox
 
 # flags
-demo_CXFLAGS 								+= -D__tb_prefix__=\"demo\"
-demo_LDFLAGS 								+= -L/usr/local/lib $(GB_CONFIG_DEMO_LDFLAGS)
+application_CXFLAGS 							+= -D__tb_prefix__=\"demo\"
+application_LDFLAGS 							+= -L/usr/local/lib $(GB_CONFIG_DEMO_LDFLAGS)
 
 # command
-demo_SUFFIX_CMD1 							+= $(GB_CONFIG_DEMO_CMD1)
+application_SUFFIX_CMD1 						+= $(GB_CONFIG_DEMO_CMD1)
 
 # suffix
 include $(PRO_DIR)/suffix.mak
