impl points and lines demo for core

--- a/src/demo/core/platform/mac/makefile
+++ b/src/demo/core/platform/mac/makefile
@@ -15,7 +15,9 @@ application_C_FILES 								+= \
 													../../arc \
 													../../rect \
 													../../line \
+													../../lines \
 													../../point \
+													../../points \
 													../../circle \
 													../../ellipse \
 													../../triangle 
