fix draw skia polygon and add path demo for core

--- a/src/demo/core/platform/cygwin/makefile
+++ b/src/demo/core/platform/cygwin/makefile
@@ -14,6 +14,7 @@ application_C_FILES 								+= \
 													../../demo \
 													../../arc \
 													../../rect \
+													../../path \
 													../../line \
 													../../lines \
 													../../point \
