remove render from bitmap and gl device

--- a/src/gbox/makefile
+++ b/src/gbox/makefile
@@ -25,6 +25,7 @@ gbox_C_FILES 			+= \
 						core/device/bitmap/render/stroke/lines \
 						core/device/bitmap/render/stroke/points \
 						core/device/bitmap/render/stroke/polygon \
+						core/device/bitmap/render/fill/line \
 						core/device/bitmap/render/fill/rect \
 						core/device/bitmap/render/fill/polygon \
 						core/prefix/prefix \
