add stroker and impl some interfaces

--- a/src/gbox/makefile
+++ b/src/gbox/makefile
@@ -38,6 +38,7 @@ gbox_C_FILES 			+= \
 						core/impl/cache_stack \
 						core/impl/cache_stack \
 						core/impl/stroke \
+						core/impl/stroker \
 						core/impl/geometry \
 						core/impl/polygon_raster 
 
