add vector interfaces

--- a/src/demo/console/makefile
+++ b/src/demo/console/makefile
@@ -11,6 +11,7 @@ demo_TYPE 									= BIN
 demo_C_FILES 								+= \
 											demo \
 											core/path \
+											core/vector \
 											core/bitmap \
 											other/test
 
