--- a/src/demo/core/platform/linux/makefile
+++ b/src/demo/core/platform/linux/makefile
@@ -16,7 +16,7 @@ application_C_FILES 								+= \
 													../../rect \
 													../../path \
 													../../quad \
-													../../cube \
+													../../cubic \
 													../../line \
 													../../lines \
 													../../point \
