--- a/src/gbox/makefile
+++ b/src/gbox/makefile
@@ -47,8 +47,9 @@ gbox_C_FILES 			+= \
 						core/impl/cache_stack \
 						core/impl/cache_stack \
 						core/impl/stroker \
+						core/impl/arc \
 						core/impl/quad \
-						core/impl/geometry \
+						core/impl/cubic \
 						core/impl/polygon_raster 
 
 
