impl tiger demo

--- a/src/demo/core/platform/mac/makefile
+++ b/src/demo/core/platform/mac/makefile
@@ -19,6 +19,7 @@ application_C_FILES 								+= \
 													../../cubic \
 													../../line \
 													../../lines \
+													../../tiger \
 													../../point \
 													../../points \
 													../../circle \
