add mesh edge, face and vertex files

--- a/src/demo/console/makefile
+++ b/src/demo/console/makefile
@@ -13,6 +13,7 @@ demo_C_FILES 									+= \
 												core/path \
 												core/vector \
 												core/bitmap \
+												core/impl/mesh \
 												other/test
 
 # libs
